sort.basic.comb.AlgCombSort.scala.error
Erreur de compilation :
AlgCombSort:17: error: Boolean does not take parameters
      if (plusPetit(i , i+ecart)() == false) {
                                ^AlgCombSort:19: error: Unit does not take parameters
        echange(i, i+ecart)()
                           ^AlgCombSort:21: error: not found: value a
        a = 1
        ^AlgCombSort:26: error: not found: value a
  } while ( ecart > 1 || a == 1)
                         ^